added the .csproj

--- a/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
+++ b/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     
-    <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version=1.0.0-CI-20200422-101316" />
+    <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.0.0-CI-20200422-101316" />
   </ItemGroup>
 
   <ItemGroup>
